--- a/grow/single.html
+++ b/grow/single.html
@@ -7,4 +7,13 @@
                 <p>{{department.about}}</p>
         </div>
 
+        <div class="article-body">
+                <h2 style="text-align: center">Employers in this department</h2>
+        </div>
+        {% for employee in employers %}
+        <div class="article-body">
+            <h2>{{employee.firstName}} {{employee.lastName}}</h2>
+            <p>{{employee.about}}</p>
+        </div>
+        {% endfor %}
 {% endblock %}
